[package]
description = "Internal implementation details for `tracked`."
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "tracked-impl"
repository = "https://github.com/trevyn/tracked"
rust-version = "1.56"
version = "0.5.3"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = {version = "1.0.12", features = ["full", "visit-mut"]}

[dev-dependencies]
todo-or-die = {version = "0.1", features = ["github"]}
