[package]
description = "Internal implementation details for `tracked`."
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "tracked-impl"
repository = "https://github.com/trevyn/tracked"
rust-version = "1.56"
version = "0.5.4"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = {version = "2", features = ["full", "visit-mut"]}

[dev-dependencies]
log = "=0.4.18" # 0.4.19 is MSRV 1.60
tokio = "=1.29" # 1.30 is MSRV 1.63
h2 = "=0.3.20" # 0.3.21 is MSRV 1.63
todo-or-die = {version = "0.1", features = ["github"]}
