[package]
authors = ["The authors"]
description = "A stringly-typed Error that includes `#[track_caller]` information."
documentation = "https://docs.rs/tracked"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "tracked"
repository = "https://github.com/trevyn/tracked"
rust-version = "1.56"
version = "0.4.0"

[dependencies]
once_cell = "1"
serde = {version = "1.0", features = ["derive"], optional = true}
tracked-impl = {path = "../tracked-impl", version = "=0.4.0"}

[features]
default = ["serde"]
